# MyGPTApp

./: .gitignore  README.md  manage.py  pyproject.toml
examples/: listings_sample.csv  ranked_preview.csv
properties/: admin.py  models.py  tests.py  urls.py  views.py
properties/management/commands/: seed_sample_data.py  send_weekly_digest.py
properties/migrations/: 0001_initial.py
properties/templates/properties/: compliance_list.html  dashboard.html  property_list.html  tenancy_list.html
rental_manager/: asgi.py  settings.py  wsgi.py
src/btl_deals/: __init__.py  analyzer.py  cli.py
templates/: base.html
tests/: test_analyzer.py
