[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btl-deals"
version = "0.1.0"
description = "BTL property deal analyzer that ranks listings and exports to Excel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
